package com.urise.webapp.model;

public class ElementBulletsList {
    FormatedText text;
}
