package com.urise.webapp.model;

public class FormatedText {
    String text;
    boolean hasLink;
    String link;
    boolean isBold;
}
