package com.urise.webapp.model;

import java.util.Date;

public class Period {
    PeriodDate startDate;
    PeriodDate endDate;
    FormatedText title;
    boolean hasText;
    FormatedText text;
}
