package com.urise.webapp.model;

public class PeriodDate {
    int year;
    int month;
    boolean isNow;
}
