package com.urise.webapp.model;

import java.util.List;

public class PeriodsGroup {
    FormatedText title;
    List<Period> periods;
}
