package com.urise.webapp.model;

import java.util.List;

public class SectionBulletsList extends AbstractSection{
    List<ElementBulletsList> elements;

    public SectionBulletsList(SectionType type) {
        super(type);
    }

}
