package com.urise.webapp.model;

public class SectionDescription extends AbstractSection{
    public SectionDescription(SectionType type) {
        super(type);
    }
    FormatedText text;
}
