package com.urise.webapp.model;

import java.util.List;

public class SectionGrouppedPeriodsList extends AbstractSection{

    List<PeriodsGroup> periodsGroups;

    public SectionGrouppedPeriodsList(SectionType type) {
        super(type);
    }
}
